--- a/Downloads/portsanjana/netlify.toml
+++ b/Downloads/portsanjana/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "cd client && npm run build"
   publish = "client/build"
+  branch = "main"
 
 [dev]
   command = "npm run dev"
